2004-11-08  Rick Moseley  <rmoseley@redhat.com>

	* properties/RPMPropertyPage5.java : original
	* properties/RPMPropertyPage4.java : original
	* properties/RPMPropertyPage3.java : original
	* properties/RPMPropertyPage2.java : original
	* properties/RPMPropertyPage.java : original
	* PropertyPagePlugin.java : original