@@ -1,8 +1,19 @@
 2004-11-08  Rick Moseley  <rmoseley@redhat.com>
 
+	* properties/RPMPropertyPage5.java : insert licensing verbage
+	* properties/RPMPropertyPage4.java : ditto
+	* properties/RPMPropertyPage3.java : ditto
+	* properties/RPMPropertyPage2.java : ditto
+	* properties/RPMPropertyPage.java : ditto
+	* PropertyPagePlugin.java : ditto
+
+
+2004-11-08  Rick Moseley  <rmoseley@redhat.com>
+
 	* properties/RPMPropertyPage5.java : original
 	* properties/RPMPropertyPage4.java : original
 	* properties/RPMPropertyPage3.java : original
 	* properties/RPMPropertyPage2.java : original
 	* properties/RPMPropertyPage.java : original
 	* PropertyPagePlugin.java : original
+	* plugin.xml : original
